fixed margin for column-header, added distortion-of-novelty

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -206,6 +206,7 @@ body {
 
 .column-header-light {
   column-span: all;
+  margin-top: 100px;
   margin-bottom: 20px;
   padding: 0 10px;
   font-weight: bold;
@@ -217,7 +218,6 @@ body {
 
 .top-half {
   display: flex;
-  margin-bottom: 100px;
 }
 
 .right-side {
@@ -280,7 +280,7 @@ body {
 
 .column-header-dark {
   column-span: all;
-  margin-top: 0;
+  margin-top: 100px;
   margin-bottom: 20px;
   padding: 0 10px;
   font-weight: bold;
